fix gradient vertical

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                     md:row-start-2 md:row-end-4 md:col-start-2 md:col-end-7
                 "
             >
-                <h1 class="font-serif text-7xl text-current_play">
+                <h1 class="font-serif text-5xl md:text-7xl text-current_play">
                     El huérfano de los Zhao
                 </h1>
             </div>
@@ -171,7 +171,7 @@
                         font-bolder
                         leading-loose
                         text-center
-                        md:text-lg md:uppercase md:tracking-widest
+                        text-lg md:uppercase md:tracking-widest
                         writing-mode-info-btn
                     "
                 >
